--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head><a href=white.html ; style="margin-left:1200px;color:white;border:3px solid red">LIGHT MODE</a>
+<head><a href=white.html ; style="margin-left:1400px;color:white;border:3px solid red">LIGHT MODE</a>
     <title>Gaurav</title>
+    <link rel="icon" type="image/x-icon" href="FAVICON.ico">
     <link rel="stylesheet" href="gaurav.css">
 </head>
 <body>
-<h1><span style="color:orange">The</span> <span style="color:white">Milkha</span> <span style="color:green">Singh</span></h1>
+<h1 style="text-align:center;font-size:500%"><ins style="color:orange">The</ins> <ins style="color:white">Milkha</ins> <ins style="color:green">Singh</ins></h1>
 <a href="https://en.wikipedia.org/wiki/Milkha_Singh" target="_blank">
-<img src="img.png" alt="The Milkha Singh";>
+<p style="margin-left:510px;text"><img src="bhaag milkha bhaag bollywood GIF.gif" alt="The Milkha Singh";></p>
 </a>
-<h1><span style="color:orange">BIO</span><span style="white">GRA</span><span style="color:green">PHY</span></h1>
-<p>Independent India's first individual sports star, the late great <span style="color:orange">Mil</span><span style="color:white">kha Si</span><span style="color:green">ngh</span> dominated Indian track
+<h1 style="margin-left:650px;font-size:250%;"><ins style="color:orange";>BIO</ins><ins style="color:white";>GRA</ins><ins style="color:green";>PHY</ins></h1>
+<p><span style="font-size:400%;font-family:'DejaVu Sans Mono'">I</span>ndependent India's first individual sports star, the late great <ins style="color:orange">Mil</ins><ins style="color:white">kha Si</ins><ins style="color:green">ngh</ins> dominated Indian track
     and field for over a decade with his speed and spirit, creating multiple records and winning numerous
     medals in his career.
-
 Representing India at the<ins style="text-decoration-color:white"> 1956 </ins>  Olympics in Melbourne, the <ins style='text-decoration-color:white';>1960</ins> Olympics in Rome and the <ins style="color:orange" >1964 </ins><ins style="color:white" >Olympics in </ins><ins style="color:green">Tokyo</ins>
     , Milkha Singh remains one of India's greatest athletes.
 
@@ -27,22 +27,22 @@ It was there that he sharpened his running skills. After he finished sixth in a 
 
 His first Olympic Games came at Melbourne <ins style="text-decoration-color:white">1956</ins>, where an inexperienced Milkha Singh didn't progress beyond
     the heat stages in either the 200m or 400m, but a meeting with champion Charles Jenkins proved to be the
-    source of much inspiration.<br>
-    <h1 style="font-family:'Script MT Bold'">INDEX</h1>
+    source of much inspiration.<br><hr>
+    <h1 style="font-family:'Script MT Bold';">INDEX</h1>
  <a href="https://en.wikipedia.org/wiki/Milkha_Singh" target="_blank">Milkha singh Information</a><br>
 <a href="#c1">Summary</a><br>
 <a href="#c2">International career</a><br>
 <a href="#c3">Personal life</a><br>
 <a href="#c4">Later life and death</a><br>
-<a href="#c5">Media and Popular culture</a>
-<h1 id="c1"><i><span style="color:orange">Su</span><span style="white">mma</span><span style="color:green">ry</span></h1></i></h1>
-<p style="font-family:Calibri">Milkha Singh<ins style="text-decoration-color:white"> (20 November 1929 - 18 June 2021)</ins>,also known as "The Flying Sikh", was an Indian track and field sprinter who was introduced to
+<a href="#c5">Media and Popular culture</a><hr>
+<h1 style="text-align:center;font-size:250%" id="c1";><i><ins style="color:orange">Su</ins><ins style="white">mma</ins><ins style="color:green">ry</ins></h1></i></h1>
+<p style="font-family:Calibri;background-image:url('indiaflag.jpg');color:black">Milkha Singh<ins style="text-decoration-color:white"> (20 November 1929 - 18 June 2021)</ins>,also known as "The Flying Sikh", was an Indian track and field sprinter who was introduced to
     the sport while serving in the Indian Army. He is the only athlete to win gold at 400 metres at the Asian Games as well as the Commonwealth Games.
     He has won gold medals in the<ins style="text-decoration-color:white"> 1958</ins> and<ins style="text-decoration-color:white"> 1962</ins> Asian Games. He represented India in the <ins style="text-decoration-color:white">1956 </ins>Summer Olympics in Melbourne, the <ins style="text-decoration-color:white">1960</ins> Summer Olympics in
     Rome and the<ins style="text-decoration-color:white"> 1964</ins> Summer Olympics in Tokyo. Singh was awarded the Padma Shri in <ins style="text-decoration-color:white">1959</ins>i, India's fourth-highest civilian honour, in recognition of his
-    sporting achievements.<br>
-    <h1><i><span style="color:orange">Ear</span><span style="white">ly L</span><span style="color:green">ife</span></i></h1>
-<p>Milkha Singh was born on<ins style="text-decoration-color:white"> 20 November 1929</ins>, into a Sikh Rathore Rajput family.
+    sporting achievements.<br><hr>
+    <h1 style="text-align:center;font-size:250%";><ins style="color:orange"<i>Ear</ins><ins style="white">ly L</ins><ins style="color:green">ife</ins></i></h1>
+<p style="background-image: url('indiaflag.jpg');color:black">Milkha Singh was born on<ins style="text-decoration-color:white"> 20 November 1929</ins>, into a Sikh Rathore Rajput family.
     His birthplace was Govindpura, a village 10 kilometres (6.2 mi) from Muzaffargarh city in Punjab Province,
     British India (now Kot Adu district, Pakistan). He was one of 15 siblings,
     eight of whom died before the Partition of India. He was orphaned during the Partition when his parents,
@@ -60,8 +60,8 @@ Milkha became disenchanted with his life and considered becoming a dacoit[b] but
     athletics. He had run the 10 km distance to and from school as a child and was selected by
     the army for special training in athletics after finishing sixth in a compulsory cross-country
     run for new recruits. Singh has acknowledged how the army introduced him to sport, saying
-    that "I came from a remote village, I didn't know what running was, or the Olympics".
-<h1 id="c2"><span style="color:orange">Intern</span><span style="white">ational </span><span style="color:green">Career</span></h1>
+    that "I came from a remote village, I didn't know what running was, or the Olympics".</p><hr>
+<h1 style="text-align:center;font-size:250%"; id="c2"><ins style="color:orange">Intern</ins><ins style="white">ational </ins><ins style="color:green">Career</ins></h1>
 <p>Milkha represented India in the 200 m and 400 m competitions of the 1956 Melbourne Olympic Games.
     His inexperience meant that he did not progress from the heat stages but a meeting with the eventual
     400 m champion at those Games, Charles Jenkins, both inspired him to greater things and provided him
@@ -110,13 +110,13 @@ There have been claims that Singh won 77 of his 80 races, but these are spurious
 Singh's time in the 1960 Olympics 400 m final, which was run on a cinder track, set a national
     record that stood until 1998 when Paramjit Singh exceeded it on a synthetic track and with
     fully automatic timing that recorded 45.70 seconds. Although Singh's Olympic result of 45.6
-    seconds had been hand-timed, an electronic system at those Games had determined his record to be 45.73.</p>
-    <h1 id="c3"><span style="color:orange">Pers</span><span style="white">onal</span><span style="color:green"> life</span></h1>
+    seconds had been hand-timed, an electronic system at those Games had determined his record to be 45.73.</p><hr>
+    <h1 style="text-align:center;font-size:250%";id="c3"><ins style="color:orange">Pers</ins><ins style="white">onal</ins><ins style="color:green"> life</ins></h1>
 <p>As of 2012, Singh lived in Chandigarh.He met Nirmal Saini, a former captain of the Indian women's
 volleyball team in Ceylon in 1955; they married in 1962 and had three daughters and a son, the golfer 
 Jeev Milkha Singh. In 1999, they adopted the seven-year-old son of Havildar Bikram Singh, who had died in 
-the Battle of Tiger Hill.</p>
-<h1 id="c4"><span style="color:orange">Later </span><span style="white">life and </span><span style="color:green">death</span></h1>
+the Battle of Tiger Hill.</p><hr>
+<h1 style="text-align:center;font-size:250%"; id="c4"><ins style="color:orange">Later </ins><ins style="white">life and </ins><ins style="color:green">death</ins></h1>
 <p>
     Singh was promoted from the rank of sepoy to junior commissioned officer in recognition of his
     successes in the 1958 Asian Games. He subsequently became Director of Sports in Punjab
@@ -139,8 +139,8 @@ Singh was admitted to the intensive care unit at Fortis Hospital in Mohali on 24
     caused by COVID-19. His condition was, for a while, described as stable, but he died on 18 June 2021
     at 11:30 pm in Chandigarh. His wife, Nirmal Saini, had died a few days earlier on 13 June 2021,
     also due to COVID-19. Singh was laid on his funeral pyre with a photo of his wife in his hands.
-</p>
-<h1 id="c5"><span style="color:orange">Media and</span><span style="white"> popular</span><span style="color:green"> culture</span> </h1>
+</p><hr>
+<h1 style="text-align:center;font-size:250%"; id="c5"><ins style="color:orange">Media and</ins><ins style="white"> popular</ins><ins style="color:green"> culture</ins> </h1>
 <p>
     Singh and his daughter, Sonia Sanwalka, co-wrote his autobiography, titled The Race of My Life.
     It was published in 2013. The book inspired[37] Bhaag Milkha Bhaag, a 2013 biographical film
@@ -158,7 +158,7 @@ In September 2017, Singh's wax statue – created by sculptors of Madame Tussaud
     1958 Commonwealth Games.The statue is placed at Madame Tussauds museum in New Delhi, India
     . After winning India's first track and field gold medal at the 2020 Olympics, Neeraj Chopra
     dedicated his victory to Singh.
-</p>
+</p><hr>
 
 
 </body>
