--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1 style="text-align:center;font-size:500%"><ins style="color:orange">The</ins> <ins style="color:white">Milkha</ins> <ins style="color:green">Singh</ins></h1>
 <a href="https://en.wikipedia.org/wiki/Milkha_Singh" target="_blank">
-<p style="margin-left:510px;text"><img src="bhaag milkha bhaag bollywood GIF.gif" alt="The Milkha Singh";></p>
+<p style="margin-left:510px;text"><img src="/images/bhaag milkha bhaag bollywood GIF.gif" alt="The Milkha Singh";></p>
 </a>
 <h1 style="margin-left:650px;font-size:250%;"><ins style="color:orange";>BIO</ins><ins style="color:white";>GRA</ins><ins style="color:green";>PHY</ins></h1>
 <p><span style="font-size:400%;font-family:'DejaVu Sans Mono'">I</span>ndependent India's first individual sports star, the late great <ins style="color:orange">Mil</ins><ins style="color:white">kha Si</ins><ins style="color:green">ngh</ins> dominated Indian track
@@ -163,3 +163,4 @@ In September 2017, Singh's wax statue – created by sculptors of Madame Tussaud
 
 </body>
 </html>
+
