--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ His first Olympic Games came at Melbourne <ins style="text-decoration-color:whit
 <a href="#c4">Later life and death</a><br>
 <a href="#c5">Media and Popular culture</a><hr>
 <h1 style="text-align:center;font-size:250%" id="c1";><i><ins style="color:orange">Su</ins><ins style="white">mma</ins><ins style="color:green">ry</ins></h1></i></h1>
-<p style="font-family:Calibri;background-image:url('indiaflag.jpg');color:black">Milkha Singh<ins style="text-decoration-color:white"> (20 November 1929 - 18 June 2021)</ins>,also known as "The Flying Sikh", was an Indian track and field sprinter who was introduced to
+<p style="font-family:Calibri;background-image:url('/images/indiaflag.jpg');color:black">Milkha Singh<ins style="text-decoration-color:white"> (20 November 1929 - 18 June 2021)</ins>,also known as "The Flying Sikh", was an Indian track and field sprinter who was introduced to
     the sport while serving in the Indian Army. He is the only athlete to win gold at 400 metres at the Asian Games as well as the Commonwealth Games.
     He has won gold medals in the<ins style="text-decoration-color:white"> 1958</ins> and<ins style="text-decoration-color:white"> 1962</ins> Asian Games. He represented India in the <ins style="text-decoration-color:white">1956 </ins>Summer Olympics in Melbourne, the <ins style="text-decoration-color:white">1960</ins> Summer Olympics in
     Rome and the<ins style="text-decoration-color:white"> 1964</ins> Summer Olympics in Tokyo. Singh was awarded the Padma Shri in <ins style="text-decoration-color:white">1959</ins>i, India's fourth-highest civilian honour, in recognition of his
@@ -163,6 +163,7 @@ In September 2017, Singh's wax statue – created by sculptors of Madame Tussaud
 
 </body>
 </html>
+
 
 
 
