--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ His first Olympic Games came at Melbourne <ins style="text-decoration-color:whit
     Rome and the<ins style="text-decoration-color:white"> 1964</ins> Summer Olympics in Tokyo. Singh was awarded the Padma Shri in <ins style="text-decoration-color:white">1959</ins>i, India's fourth-highest civilian honour, in recognition of his
     sporting achievements.<br><hr>
     <h1 style="text-align:center;font-size:250%";><ins style="color:orange"<i>Ear</ins><ins style="white">ly L</ins><ins style="color:green">ife</ins></i></h1>
-<p style="background-image: url('indiaflag.jpg');color:black">Milkha Singh was born on<ins style="text-decoration-color:white"> 20 November 1929</ins>, into a Sikh Rathore Rajput family.
+<p style="background-image: url('/images/indiaflag.jpg');color:black">Milkha Singh was born on<ins style="text-decoration-color:white"> 20 November 1929</ins>, into a Sikh Rathore Rajput family.
     His birthplace was Govindpura, a village 10 kilometres (6.2 mi) from Muzaffargarh city in Punjab Province,
     British India (now Kot Adu district, Pakistan). He was one of 15 siblings,
     eight of whom died before the Partition of India. He was orphaned during the Partition when his parents,
@@ -163,6 +163,7 @@ In September 2017, Singh's wax statue – created by sculptors of Madame Tussaud
 
 </body>
 </html>
+
 
 
 
