--- a/white.html
+++ b/white.html
@@ -3,7 +3,7 @@
 <head><a href=index.html ; style="margin-left:1400px;color:white;border:3px solid red">DARK MODE</a>
     <title>Gaurav</title>
     <link rel="icon" type="image/x-icon" href="FAVICON.ico">
-    <link rel="stylesheet" href="gaurav.css">
+    <link rel="stylesheet" href="white.css">
 </head>
 <body>
 <h1 style="text-align:center;font-size:500%"><ins style="color:orange">The</ins> <ins style="color:white">Milkha</ins> <ins style="color:green">Singh</ins></h1>
@@ -163,4 +163,5 @@ In September 2017, Singh's wax statue – created by sculptors of Madame Tussaud
 
 </body>
 </html>
+
 
