--- a/white.html
+++ b/white.html
@@ -6,18 +6,18 @@
     <link rel="stylesheet" href="white.css">
 </head>
 <body>
-<h1 style="text-align:center;font-size:500%"><ins style="color:orange">The</ins> <ins style="color:white">Milkha</ins> <ins style="color:green">Singh</ins></h1>
+<h1 style="text-align:center;font-size:500%"><ins style="color:orange">The</ins> <ins style="color:black">Milkha</ins> <ins style="color:green">Singh</ins></h1>
 <a href="https://en.wikipedia.org/wiki/Milkha_Singh" target="_blank">
 <p style="margin-left:510px;text"><img src="bhaag milkha bhaag bollywood GIF.gif" alt="The Milkha Singh";></p>
 </a>
-<h1 style="margin-left:650px;font-size:250%;"><ins style="color:orange";>BIO</ins><ins style="color:white";>GRA</ins><ins style="color:green";>PHY</ins></h1>
-<p><span style="font-size:400%;font-family:'DejaVu Sans Mono'">I</span>ndependent India's first individual sports star, the late great <ins style="color:orange">Mil</ins><ins style="color:white">kha Si</ins><ins style="color:green">ngh</ins> dominated Indian track
+<h1 style="margin-left:650px;font-size:250%;"><ins style="color:orange";>BIO</ins><ins style="color:black";>GRA</ins><ins style="color:green";>PHY</ins></h1>
+<p><span style="font-size:400%;font-family:'DejaVu Sans Mono'">I</span>ndependent India's first individual sports star, the late great <ins style="color:orange">Mil</ins><ins style="color:black">kha Si</ins><ins style="color:green">ngh</ins> dominated Indian track
     and field for over a decade with his speed and spirit, creating multiple records and winning numerous
     medals in his career.
-Representing India at the<ins style="text-decoration-color:white"> 1956 </ins>  Olympics in Melbourne, the <ins style='text-decoration-color:white';>1960</ins> Olympics in Rome and the <ins style="color:orange" >1964 </ins><ins style="color:white" >Olympics in </ins><ins style="color:green">Tokyo</ins>
+Representing India at the<ins style="text-decoration-color:black"> 1956 </ins>  Olympics in Melbourne, the <ins style='text-decoration-color:black';>1960</ins> Olympics in Rome and the <ins style="color:orange" >1964 </ins><ins style="color:black" >Olympics in </ins><ins style="color:green">Tokyo</ins>
     , Milkha Singh remains one of India's greatest athletes.
 
-Born on<ins style="text-decoration-color:white"> 20 November 1929</ins> into a Sikh family in Govindpura, which is now a part of Pakistan,
+Born on<ins style="text-decoration-color:black"> 20 November 1929</ins> into a Sikh family in Govindpura, which is now a part of Pakistan,
     Milkha Singh was introduced to the sport only after he had fled to India post the partition
     and joined the Indian Army.
 
@@ -25,7 +25,7 @@ It was there that he sharpened his running skills. After he finished sixth in a 
     had around 400 more soldiers running, he was handpicked for further training.
     That laid the foundation for what would be an impressive career.
 
-His first Olympic Games came at Melbourne <ins style="text-decoration-color:white">1956</ins>, where an inexperienced Milkha Singh didn't progress beyond
+His first Olympic Games came at Melbourne <ins style="text-decoration-color:black">1956</ins>, where an inexperienced Milkha Singh didn't progress beyond
     the heat stages in either the 200m or 400m, but a meeting with champion Charles Jenkins proved to be the
     source of much inspiration.<br><hr>
     <h1 style="font-family:'Script MT Bold';">INDEX</h1>
@@ -35,33 +35,33 @@ His first Olympic Games came at Melbourne <ins style="text-decoration-color:whit
 <a href="#c3">Personal life</a><br>
 <a href="#c4">Later life and death</a><br>
 <a href="#c5">Media and Popular culture</a><hr>
-<h1 style="text-align:center;font-size:250%" id="c1";><i><ins style="color:orange">Su</ins><ins style="white">mma</ins><ins style="color:green">ry</ins></h1></i></h1>
-<p style="font-family:Calibri;background-image:url('indiaflag.jpg');color:white">Milkha Singh<ins style="text-decoration-color:white"> (20 November 1929 - 18 June 2021)</ins>,also known as "The Flying Sikh", was an Indian track and field sprinter who was introduced to
+<h1 style="text-align:center;font-size:250%" id="c1";><i><ins style="color:orange">Su</ins><ins style="black">mma</ins><ins style="color:green">ry</ins></h1></i></h1>
+<p style="font-family:Calibri;background-image:url('indiaflag.jpg');color:black">Milkha Singh<ins style="text-decoration-color:black"> (20 November 1929 - 18 June 2021)</ins>,also known as "The Flying Sikh", was an Indian track and field sprinter who was introduced to
     the sport while serving in the Indian Army. He is the only athlete to win gold at 400 metres at the Asian Games as well as the Commonwealth Games.
-    He has won gold medals in the<ins style="text-decoration-color:white"> 1958</ins> and<ins style="text-decoration-color:white"> 1962</ins> Asian Games. He represented India in the <ins style="text-decoration-color:white">1956 </ins>Summer Olympics in Melbourne, the <ins style="text-decoration-color:white">1960</ins> Summer Olympics in
-    Rome and the<ins style="text-decoration-color:white"> 1964</ins> Summer Olympics in Tokyo. Singh was awarded the Padma Shri in <ins style="text-decoration-color:white">1959</ins>i, India's fourth-highest civilian honour, in recognition of his
+    He has won gold medals in the<ins style="text-decoration-color:black"> 1958</ins> and<ins style="text-decoration-color:black"> 1962</ins> Asian Games. He represented India in the <ins style="text-decoration-color:black">1956 </ins>Summer Olympics in Melbourne, the <ins style="text-decoration-color:black">1960</ins> Summer Olympics in
+    Rome and the<ins style="text-decoration-color:black"> 1964</ins> Summer Olympics in Tokyo. Singh was awarded the Padma Shri in <ins style="text-decoration-color:black">1959</ins>i, India's fourth-highest civilian honour, in recognition of his
     sporting achievements.<br><hr>
-    <h1 style="text-align:center;font-size:250%";><ins style="color:orange"<i>Ear</ins><ins style="white">ly L</ins><ins style="color:green">ife</ins></i></h1>
-<p style="background-image: url('indiaflag.jpg');color:white">Milkha Singh was born on<ins style="text-decoration-color:white"> 20 November 1929</ins>, into a Sikh Rathore Rajput family.
+    <h1 style="text-align:center;font-size:250%";><ins style="color:orange"<i>Ear</ins><ins style="black">ly L</ins><ins style="color:green">ife</ins></i></h1>
+<p style="background-image: url('indiaflag.jpg');color:black">Milkha Singh was born on<ins style="text-decoration-color:black"> 20 November 1929</ins>, into a Sikh Rathore Rajput family.
     His birthplace was Govindpura, a village 10 kilometres (6.2 mi) from Muzaffargarh city in Punjab Province,
     British India (now Kot Adu district, Pakistan). He was one of 15 siblings,
     eight of whom died before the Partition of India. He was orphaned during the Partition when his parents,
     a brother and two sisters were killed in the violence that ensued. He witnessed these killings.
 
-Escaping the troubles in Punjab, where killings were continuing, by moving to Delhi, India, in<ins style="text-decoration-color:white"> 1947</ins>,
+Escaping the troubles in Punjab, where killings were continuing, by moving to Delhi, India, in<ins style="text-decoration-color:black"> 1947</ins>,
     Singh lived for a short time with the family of his married sister and was briefly imprisoned at
     Tihar jail for travelling on a train without a ticket. His sister, Ishvar, sold some jewellery to
     obtain his release.He spent some time at a refugee camp in Purana Qila and at a
     resettlement colony in Shahdara, both in Delhi.
 Milkha became disenchanted with his life and considered becoming a dacoit[b] but was instead
     persuaded by one of his brothers, Malkhan, to attempt recruitment to the Indian Army.
-    He successfully gained entrance on his fourth attempt, in<ins style="text-decoration-color:white"> 1951</ins>, and while stationed at
+    He successfully gained entrance on his fourth attempt, in<ins style="text-decoration-color:black"> 1951</ins>, and while stationed at
     the Electrical Mechanical Engineering Centre in Secunderabad and he was introduced to
     athletics. He had run the 10 km distance to and from school as a child and was selected by
     the army for special training in athletics after finishing sixth in a compulsory cross-country
     run for new recruits. Singh has acknowledged how the army introduced him to sport, saying
     that "I came from a remote village, I didn't know what running was, or the Olympics".</p><hr>
-<h1 style="text-align:center;font-size:250%"; id="c2"><ins style="color:orange">Intern</ins><ins style="white">ational </ins><ins style="color:green">Career</ins></h1>
+<h1 style="text-align:center;font-size:250%"; id="c2"><ins style="color:orange">Intern</ins><ins style="black">ational </ins><ins style="color:green">Career</ins></h1>
 <p>Milkha represented India in the 200 m and 400 m competitions of the 1956 Melbourne Olympic Games.
     His inexperience meant that he did not progress from the heat stages but a meeting with the eventual
     400 m champion at those Games, Charles Jenkins, both inspired him to greater things and provided him
@@ -111,12 +111,12 @@ Singh's time in the 1960 Olympics 400 m final, which was run on a cinder track, 
     record that stood until 1998 when Paramjit Singh exceeded it on a synthetic track and with
     fully automatic timing that recorded 45.70 seconds. Although Singh's Olympic result of 45.6
     seconds had been hand-timed, an electronic system at those Games had determined his record to be 45.73.</p><hr>
-    <h1 style="text-align:center;font-size:250%";id="c3"><ins style="color:orange">Pers</ins><ins style="white">onal</ins><ins style="color:green"> life</ins></h1>
+    <h1 style="text-align:center;font-size:250%";id="c3"><ins style="color:orange">Pers</ins><ins style="black">onal</ins><ins style="color:green"> life</ins></h1>
 <p>As of 2012, Singh lived in Chandigarh.He met Nirmal Saini, a former captain of the Indian women's
 volleyball team in Ceylon in 1955; they married in 1962 and had three daughters and a son, the golfer 
 Jeev Milkha Singh. In 1999, they adopted the seven-year-old son of Havildar Bikram Singh, who had died in 
 the Battle of Tiger Hill.</p><hr>
-<h1 style="text-align:center;font-size:250%"; id="c4"><ins style="color:orange">Later </ins><ins style="white">life and </ins><ins style="color:green">death</ins></h1>
+<h1 style="text-align:center;font-size:250%"; id="c4"><ins style="color:orange">Later </ins><ins style="black">life and </ins><ins style="color:green">death</ins></h1>
 <p>
     Singh was promoted from the rank of sepoy to junior commissioned officer in recognition of his
     successes in the 1958 Asian Games. He subsequently became Director of Sports in Punjab
@@ -163,5 +163,6 @@ In September 2017, Singh's wax statue – created by sculptors of Madame Tussaud
 
 </body>
 </html>
+
 
 
