--- a/white.html
+++ b/white.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><a href=index.html ; style="margin-left:1400px;color:white;border:3px solid red">DARK MODE</a>
+<head><a href=index.html ; style="margin-left:1400px;color:black;border:3px solid red">DARK MODE</a>
     <title>Gaurav</title>
     <link rel="icon" type="image/x-icon" href="FAVICON.ico">
     <link rel="stylesheet" href="white.css">
@@ -163,6 +163,7 @@ In September 2017, Singh's wax statue – created by sculptors of Madame Tussaud
 
 </body>
 </html>
+
 
 
 
