--- a/white.html
+++ b/white.html
@@ -36,13 +36,13 @@ His first Olympic Games came at Melbourne <ins style="text-decoration-color:blac
 <a href="#c4">Later life and death</a><br>
 <a href="#c5">Media and Popular culture</a><hr>
 <h1 style="text-align:center;font-size:250%" id="c1";><i><ins style="color:orange">Su</ins><ins style="black">mma</ins><ins style="color:green">ry</ins></h1></i></h1>
-<p style="font-family:Calibri;background-image:url('indiaflag.jpg');color:black">Milkha Singh<ins style="text-decoration-color:black"> (20 November 1929 - 18 June 2021)</ins>,also known as "The Flying Sikh", was an Indian track and field sprinter who was introduced to
+<p style="font-family:Calibri;background-image:url('/images/indiaflag.jpg');color:black">Milkha Singh<ins style="text-decoration-color:black"> (20 November 1929 - 18 June 2021)</ins>,also known as "The Flying Sikh", was an Indian track and field sprinter who was introduced to
     the sport while serving in the Indian Army. He is the only athlete to win gold at 400 metres at the Asian Games as well as the Commonwealth Games.
     He has won gold medals in the<ins style="text-decoration-color:black"> 1958</ins> and<ins style="text-decoration-color:black"> 1962</ins> Asian Games. He represented India in the <ins style="text-decoration-color:black">1956 </ins>Summer Olympics in Melbourne, the <ins style="text-decoration-color:black">1960</ins> Summer Olympics in
     Rome and the<ins style="text-decoration-color:black"> 1964</ins> Summer Olympics in Tokyo. Singh was awarded the Padma Shri in <ins style="text-decoration-color:black">1959</ins>i, India's fourth-highest civilian honour, in recognition of his
     sporting achievements.<br><hr>
     <h1 style="text-align:center;font-size:250%";><ins style="color:orange"<i>Ear</ins><ins style="black">ly L</ins><ins style="color:green">ife</ins></i></h1>
-<p style="background-image: url('indiaflag.jpg');color:black">Milkha Singh was born on<ins style="text-decoration-color:black"> 20 November 1929</ins>, into a Sikh Rathore Rajput family.
+<p style="background-image: url('/images/indiaflag.jpg');color:black">Milkha Singh was born on<ins style="text-decoration-color:black"> 20 November 1929</ins>, into a Sikh Rathore Rajput family.
     His birthplace was Govindpura, a village 10 kilometres (6.2 mi) from Muzaffargarh city in Punjab Province,
     British India (now Kot Adu district, Pakistan). He was one of 15 siblings,
     eight of whom died before the Partition of India. He was orphaned during the Partition when his parents,
@@ -163,6 +163,7 @@ In September 2017, Singh's wax statue – created by sculptors of Madame Tussaud
 
 </body>
 </html>
+
 
 
 
